# dirscan

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  README.rst  TODO  TODO.md  TODO.rst  changelog.rst  pylintrc  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  validate.yml
contrib/: convert-old-scanfile.py  list-duplicated-files.py  move-equal-files.py  remove-equal-files-on-right.py
dirscan/: __init__.py  __main__.py  compare.py  dirscan.py  fileinfo.py  formatfields.py  log.py  progress.py  scanfile.py  usage.py
docs/: conf.py  index.rst  reference.rst
src/dirscan/: __init__.py  __main__.py  compare.py  digest.py  dirscan.py  formatfields.py  log.py  progress.py  scanfile.py  usage.py  walkdirs.py
tests/: 01-basic.sh  02-compares.sh  03-scanfile.sh  04-top.sh  05-permission.sh  06-exclusions.sh  07-encoding-error.sh  08-quoting.sh  conftest.py  runtest.sh  test_compare.py  test_dirscan.py  test_dirscanobj.py  test_main.py  test_scanfile.py  test_shadiff.py  test_walkdir.py  test_walkdirs.py  testfuncs.sh
tests/data/: 07-encoding-error.tgz
