[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[project]
name = "dirscan"
version = "1.1a1"
description = "Directory traversal utility with advanced filtering capabilities"
authors = [
    {name = "Svein Seldal", email = "sveinse@seldal.com"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities",
]
dependencies = [
    "typing-extensions",
]
license = "MIT"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "mypy",
]
doc = [
    "sphinx",
    "myst-parser",
    "furo",
]

[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/sveinse/dirscan"
"Bug Tracker" = "https://github.com/sveinse/dirscan/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
dirscan = "dirscan.__main__:main"

[tool.uv.build-backend]
source-include = [
    "tests/**",
    "docs/**",
    "CHANGELOG.md",
    "TODO.md",
    "LICENSE",
]
source-exclude = [
    "docs/build",
    ".coverage",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-l --tb=native --cov --cov-branch --cov-report=html"
testpaths = [
    "tests",
]
filterwarnings = "ignore::DeprecationWarning"

# Configuration for coverage.py which is used by pytest-cov and SonarQube
[tool.coverage.run]
relative_files = true
branch = true
source = [
    "src/dirscan",
]

[tool.mypy]
strict = true
# disallow_untyped_defs = true
ignore_missing_imports = true
show_column_numbers = true
show_error_codes = true
exclude = "(^tests/)"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",  # Ignore unused imports in __init__.py files
]
