[metadata]
name = dirscan
version = attr: dirscan.__version__
description = Directory traverser
long_description = file: README.md
long_description_content_type = text/markdown
author = Svein Seldal
url = https://github.com/sveinse/dirscan
license = MIT
license_file = LICENSE
keywords =
    utility
    directory
    filesystem
    scanner
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
project_urls =
    Bug Tracker = https://github.com/sveinse/dirscan/issues
    Source Code = https://github.com/sveinse/dirscan

[options]
python_requires = >=3.6, <4
package_dir =
    = src
packages = find:
install_requires =
    typing-extensions

[options.packages.find]
where = src

[options.extras_require]
doc =
    sphinx
    myst-parser
dev =
    pylint
    flake8
    mypy
    black
test =
    pytest
    coverage
    pytest-cov

[options.entry_points]
console_scripts =
    dirscan = dirscan.__main__:main

[bdist_wheel]
universal=1

[flake8]
max-line-length = 120
extend-exclude = tests/*
per-file-ignores =
    dirscan/__init__.py:F401
    tests/*:*

[tool:pytest]
addopts = -l --tb=native --cov=dirscan
testpaths =
    tests

[mypy]
strict = True
#disallow-untyped-defs = True
ignore_missing_imports = True
show_column_numbers = True
show_error_codes = True
#plugins = src/elns/typing/mypy_plugin.py, numpy.typing.mypy_plugin
exclude = tests
